# awepatch

./: .gitignore  README.md  README_zh.md  pyproject.toml
src/awepatch/: __init__.py  _function.py  _module.py  _utils.py  function.py  module.py  utils.py
tests/: test_patch_callable.py
tests/test_function/: test_function_patcher.py
tests/test_module/: module_for_test.py  test_module_patch.py
tests/test_utils/: test_ast_patch.py  test_find_matched_node.py  test_helper_functions.py  test_load_function_code.py  test_unwrap_function.py
